# dbt-challenge

./: .gitignore  README.md  pyproject.toml
dbt_thelookec/: .sqlfluff  Makefile  README.md  dbt_project.yml  profiles.yml.sample
dbt_thelookec/models/marts/: dm_product.sql  dm_product.yml  dm_user.sql  dm_user.yml  fc_order_item.sql  fc_order_item.yml
dbt_thelookec/models/staging/thelookec/: _thelookec__docs.md  _thelookec__models.yml  _thelookec__sources.yml  stg_thelookec__order_items.sql  stg_thelookec__products.sql  stg_thelookec__users.sql
docs/: dbt-gacha01.drawio  dbt-gacha02.drawio  dev.md  dev_00.md  dev_01dim.md  dev_02bigquery.md  dev_03dbt.md  dev_04query.md  dev_05dbt_tips.md  dev_06next_step.md  dev_dim.md
